Fix IdP page to allow explicit sign-in and logout